Fixed line wrap issue in console log

--- a/connection-widget.css
+++ b/connection-widget.css
@@ -15,6 +15,9 @@
 	padding-top: 3px;
 	font-size: 11px;
 }
+#connection-widget .splist-panel .panel-body {
+	padding: 0;
+}
 #connection-widget .splist .spjs-connection-warning,
 #connection-widget .splist .serialport-connection-warning {
 	padding: 8px 10px;
@@ -64,11 +67,17 @@
 	margin-right: 10px;
 	/*position: relative;*/
 }
+#connection-widget .console-log-panel .panel-body {
+	padding: 0;
+}
 
 /* -- SPJS Log -- */
 #connection-widget .console-log-output {
 	overflow: auto;
 	padding: 2px 5px;
+}
+#connection-widget .console-log-output .gcode-line {
+	white-space: nowrap;
 }
 #connection-widget .console-log-output samp,
 #connection-widget .console-log-output code {
